# pytest_httpx

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: release.yml  test.yml
pytest_httpx/: __init__.py  _httpx_internals.py  _httpx_mock.py  _options.py  _pretty_print.py  _request_matcher.py  _router.py  version.py
tests/: conftest.py  test_httpx_async.py  test_httpx_mock.py  test_httpx_sync.py  test_mock.py  test_plugin.py  test_to_response.py
