[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-httpx"
description = "Send responses to httpx."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    { name = "Colin Bounouar", email = "colin.bounouar.dev@gmail.com" },
]
maintainers = [
    { name = "Colin Bounouar", email = "colin.bounouar.dev@gmail.com" },
]
keywords = [
    "httpx",
    "pytest",
    "testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "httpx==0.27.*",
    "pytest==8.*",
]
dynamic = ["version"]

[project.urls]
documentation = "https://colin-b.github.io/pytest_httpx/"
repository = "https://github.com/Colin-b/pytest_httpx"
changelog = "https://github.com/Colin-b/pytest_httpx/blob/master/CHANGELOG.md"
issues = "https://github.com/Colin-b/pytest_httpx/issues"

[project.optional-dependencies]
testing = [
    # Used to check coverage
    "pytest-cov==5.*",
    # Used to run async tests
    "pytest-asyncio==0.24.*",
]

[project.entry-points.pytest11]
pytest_httpx = "pytest_httpx"

[tool.setuptools.dynamic]
version = {attr = "pytest_httpx.version.__version__"}

[tool.pytest.ini_options]
# Silence deprecation warnings about option "asyncio_default_fixture_loop_scope"
asyncio_default_fixture_loop_scope = "function"
